--- a/dom/timer/timer.html
+++ b/dom/timer/timer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="timer.css">
-    <script src="timer-dom.js"></script>
+    <!-- <script src="timer-dom.js"></script> -->
     <title>Document</title>
 </head>
 <body>
@@ -16,5 +16,6 @@
             <button>Reset</button>
         </div>
     </main>
+    <script src="timer-dom.js"></script>
 </body>
 </html>
